--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,69 @@
     margin: 0;
 }
 
+/* MENU BAR */
+
+.containerNav {  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  grid-template-rows: 1fr;
+  gap: 0px 0px;
+  grid-auto-flow: row;
+  height: 60px;
+}
+
+.navMenu { grid-area: 1 / 1 / 2 / 7; }
+
+.menuLogo { 
+  grid-area: 1 / 1 / 2 / 2;
+  justify-self: center;
+  align-self: center;
+}
+
+.menuInicio {
+  grid-area: 1 / 2 / 2 / 3;
+  justify-self: center;
+  align-self: center;
+}
+
+.menuLacteos {
+  grid-area: 1 / 3 / 2 / 4;
+  justify-self: center;
+  align-self: center;
+}
+
+.menuCarnicos { 
+  grid-area: 1 / 4 / 2 / 5; 
+  justify-self: center;
+  align-self: center;
+}
+
+.manuPanaderia {
+  grid-area: 1 / 5 / 2 / 6;
+  justify-self: center;
+  align-self: center;
+}
+
+.menuOtros {
+  grid-area: 1 / 6 / 2 / 7;
+  justify-self: center;
+  align-self: center;
+}
+
+.btnMenu {
+  padding: 10px 20px;
+  background: orange;
+  border-radius: 5px;
+  text-decoration: none;
+  color: black;
+}
+
+.btnMenu:hover {
+  padding: 10px 20px;
+  background: rgb(255, 191, 72);
+  border-radius: 5px;
+  text-decoration: none;
+  color: black;
+}
 /* SECCIÓN BANNER */
 
 .banner {
