--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,22 +6,37 @@
     margin: 0;
 }
 
-/* MENU BAR */
+p {
+  font-family: 'Nanum Gothic', sans-serif;
+}
+h1, h2, h3, h4, h5 {
+  font-family: 'Ubuntu', sans-serif;
+}
 
-.containerNav {  display: grid;
+/* HEADER */
+
+.containerNav { 
+  display: grid;
   grid-template-columns: repeat(6, 1fr);
   grid-template-rows: 1fr;
   gap: 0px 0px;
   grid-auto-flow: row;
-  height: 60px;
+  height: 100px;
 }
 
-.navMenu { grid-area: 1 / 1 / 2 / 7; }
+.navMenu {
+  grid-area: 1 / 1 / 2 / 7;
+}
 
 .menuLogo { 
   grid-area: 1 / 1 / 2 / 2;
   justify-self: center;
   align-self: center;
+}
+
+.logoImg {
+  width: 50%;
+  height: 50%;
 }
 
 .menuInicio {
@@ -95,7 +110,6 @@
 .bannerTexts h1 {
     font-size: 6rem;
     color: white;
-    font-family: 'Ubuntu', sans-serif;
 }
 
 .bannerTexts p {
@@ -106,38 +120,88 @@
 
 /* SECCIÓN LACTEOS */
 
-.containerLacteos {  display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr;
-    grid-auto-columns: 1fr;
-    grid-auto-rows: 1fr;
-    gap: 0px 0px;
-    grid-auto-flow: row;
-    grid-template-areas:
-      "Milk milkDerivatives";
-  }
-  .containerLacteos h2 {
-    font-family: 'Ubuntu', sans-serif;
-  }
+.containerLacteos {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr;
+  grid-auto-columns: 1fr;
+  grid-auto-rows: 1fr;
+  grid-auto-flow: row;
+  grid-template-areas:
+    "Milk milkDerivatives";
+  height: 500px;
+}
 
-  .Milk { grid-area: Milk; }
-  
-  .milkDerivatives {  display: grid;
+.titleProducts {
+  margin: 20px 0;
+}
+
+h2 {
+    text-align: center
+}
+
+.Milk { grid-area: Milk; 
+
+}
+
+.milkDerivatives { 
+    display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr;
-    gap: 0px 0px;
     grid-auto-flow: row;
     grid-template-areas:
       "Yogurt Kumis"
       "Queso Suero";
     grid-area: milkDerivatives;
+    gap: 20px;
+}
+  
+.yogurt {
+    grid-area: Yogurt;
+    justify-self: center;
+    align-self: center;
+    border: rgb(192, 192, 192) solid 1px;
+    border-radius: 15px;
   }
-  
-  .Yogurt { grid-area: Yogurt; }
-  .Kumis { grid-area: Kumis; }
-  .Queso { grid-area: Queso; }
-  .Suero { grid-area: Suero; }
-  
+
+.kumis {
+    grid-area: Kumis;
+    justify-self: center;
+    align-self: center;
+    border: rgb(192, 192, 192) solid 1px;
+    border-radius: 15px; 
+}
+
+.queso {
+    grid-area: Queso;
+    justify-self: center;
+    align-self: center; 
+    border: rgb(192, 192, 192) solid 1px;
+    border-radius: 15px;
+  }
+
+.suero {
+    grid-area: Suero;
+    justify-self: center;
+    align-self: center;
+    border: rgb(192, 192, 192) solid 1px;
+    border-radius: 15px;
+  }
+
+.kumisIn, .yogurtIn, .quesoIn, .sueroIn {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+    margin: 0 1rem;
+    padding: 2rem;
+}
+
+img {
+  border-radius: 15px 15px 0 0;
+  width: 75%;
+  height: 200px;
+}
 /* SECCIÓN CARNICOS */
 
   .containerCarnicos {  display: grid;
@@ -216,4 +280,3 @@
   .pescados { grid-area: pescados; }
   .aves { grid-area: aves; }
   .cerdos { grid-area: cerdos; }
-  
