--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,7 @@
     margin: 0;
 }
 
-p {
+p, a {
   font-family: 'Nanum Gothic', sans-serif;
 }
 h1, h2, h3, h4, h5 {
@@ -17,11 +17,17 @@ h1, h2, h3, h4, h5 {
 
 .containerNav { 
   display: grid;
-  grid-template-columns: repeat(6, 1fr);
+  grid-template-columns: repeat(10, 1fr);
   grid-template-rows: 1fr;
   gap: 0px 0px;
   grid-auto-flow: row;
   height: 100px;
+  background: white;
+  position: sticky;
+  top: 0px;
+  -webkit-box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.25);
+-moz-box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.25);
+box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.25);
 }
 
 .navMenu {
@@ -29,61 +35,78 @@ h1, h2, h3, h4, h5 {
 }
 
 .menuLogo { 
-  grid-area: 1 / 1 / 2 / 2;
-  justify-self: center;
-  align-self: center;
-}
-
-.logoImg {
-  width: 50%;
-  height: 50%;
-}
-
-.menuInicio {
   grid-area: 1 / 2 / 2 / 3;
   justify-self: center;
   align-self: center;
 }
 
+.logoImg {
+  width: 80%;
+  height: 80%;
+}
+
+.menuInicio {
+  grid-area: 1 / 4 / 2 / 5;
+  justify-self: center;
+  align-self: center;
+}
+
 .menuLacteos {
-  grid-area: 1 / 3 / 2 / 4;
-  justify-self: center;
-  align-self: center;
-}
-
-.menuCarnicos { 
-  grid-area: 1 / 4 / 2 / 5; 
-  justify-self: center;
-  align-self: center;
-}
-
-.manuPanaderia {
   grid-area: 1 / 5 / 2 / 6;
   justify-self: center;
   align-self: center;
 }
 
+.menuCarnicos { 
+  grid-area: 1 / 6 / 2 / 7; 
+  justify-self: center;
+  align-self: center;
+}
+
+.manuPanaderia {
+  grid-area: 1 / 7 / 2 / 8;
+  justify-self: center;
+  align-self: center;
+}
+
 .menuOtros {
-  grid-area: 1 / 6 / 2 / 7;
+  grid-area: 1 / 8 / 2 / 9;
   justify-self: center;
   align-self: center;
 }
 
 .btnMenu {
-  padding: 10px 20px;
+  padding: 15px 40px;
   background: orange;
-  border-radius: 5px;
+  border-radius: 10px;
   text-decoration: none;
   color: black;
 }
 
 .btnMenu:hover {
-  padding: 10px 20px;
-  background: rgb(255, 191, 72);
-  border-radius: 5px;
+  padding: 15px 40px;
+  background: rgb(255, 118, 39);
+  border-radius: 10px;
   text-decoration: none;
   color: black;
 }
+
+.btnItems {
+  padding: 10px 20px;
+  background: orange;
+  border-radius: 10px;
+  text-decoration: none;
+  color: black;
+}
+
+.btnItems:hover {
+  padding: 10px 20px;
+  background: rgb(255, 118, 39);
+  border-radius: 10px;
+  text-decoration: none;
+  color: black;
+}
+
 /* SECCIÓN BANNER */
 
 .banner {
@@ -123,25 +146,32 @@ h1, h2, h3, h4, h5 {
 .containerLacteos {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr;
+  grid-template-rows: auto;
   grid-auto-columns: 1fr;
   grid-auto-rows: 1fr;
   grid-auto-flow: row;
   grid-template-areas:
     "Milk milkDerivatives";
-  height: 500px;
 }
 
 .titleProducts {
-  margin: 20px 0;
+  margin: 40px 0;
 }
 
 h2 {
-    text-align: center
+    text-align: center;
+    font-size: 2.5rem;
 }
 
-.Milk { grid-area: Milk; 
+h3 {
+  font-size: 2rem;
+}
 
+.Milk { 
+  grid-area: Milk;
+  margin: 0 2rem;
+  border: rgb(192, 192, 192) solid 1px;
+  border-radius: 15px;
 }
 
 .milkDerivatives { 
@@ -154,6 +184,7 @@ h2 {
       "Queso Suero";
     grid-area: milkDerivatives;
     gap: 20px;
+    margin-right: 2rem;
 }
   
 .yogurt {
@@ -192,16 +223,30 @@ h2 {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 20px;
-    margin: 0 1rem;
-    padding: 2rem;
+    gap: 1.5rem;
+    padding: 1rem 2rem;
 }
 
-img {
-  border-radius: 15px 15px 0 0;
-  width: 75%;
-  height: 200px;
+.milkIn {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 1rem 2rem;
+  gap: 1.5rem;
 }
+
+.lacteosImg {
+  border-radius: 15px 15px 0 0;
+  width: 100%;
+  height: 300px;
+}
+
+.milkImg {
+  border-radius: 15px 15px 0 0;
+  width: 100%;
+  height: 700px;
+}
+
 /* SECCIÓN CARNICOS */
 
   .containerCarnicos {  display: grid;
@@ -213,16 +258,44 @@ img {
     grid-auto-flow: row;
     grid-template-areas:
       "Butifarra Chorizo Salchichon Salchicha";
+      gap: 20px;
+      margin: 0 2rem;
   }
 
+  .carnicosIn {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+    padding: 1rem 2rem; 
+}
   .containerCarnicos h2 {
     font-family: 'Ubuntu', sans-serif;
   }
   
-  .Butifarra { grid-area: Butifarra; }
-  .Chorizo { grid-area: Chorizo; }
-  .Salchichon { grid-area: Salchichon; }
-  .Salchicha { grid-area: Salchicha; }
+  .Butifarra { 
+    grid-area: Butifarra; 
+    border: rgb(192, 192, 192) solid 1px;
+    border-radius: 15px;
+  }
+
+  .Chorizo { 
+    grid-area: Chorizo; 
+    border: rgb(192, 192, 192) solid 1px;
+    border-radius: 15px;
+  }
+
+  .Salchichon { 
+    grid-area: Salchichon; 
+    border: rgb(192, 192, 192) solid 1px;
+    border-radius: 15px;
+  }
+
+  .Salchicha { 
+    grid-area: Salchicha; 
+    border: rgb(192, 192, 192) solid 1px;
+    border-radius: 15px;
+  }
 
 /* SECCIÓN PANADERIA */
 
@@ -250,15 +323,57 @@ img {
       "panMantequilla panQueso panPinita"
       "galleta cupcake kequi";
     grid-area: variosPanaderia;
+    gap: 20px;
+    margin: 0 2rem;
   }
   
-  .panMantequilla { grid-area: panMantequilla; }
-  .panQueso { grid-area: panQueso; }
-  .panPinita { grid-area: panPinita; }
-  .galleta { grid-area: galleta; }
-  .cupcake { grid-area: cupcake; }
-  .kequi { grid-area: kequi; }
-  .torta { grid-area: torta; }
+  .panMantequilla { 
+    grid-area: panMantequilla; 
+    border: rgb(192, 192, 192) solid 1px;
+    border-radius: 15px;
+  }
+  .panQueso { 
+    grid-area: panQueso; 
+    border: rgb(192, 192, 192) solid 1px;
+    border-radius: 15px;
+  }
+  .panPinita { 
+    grid-area: panPinita; 
+    border: rgb(192, 192, 192) solid 1px;
+    border-radius: 15px;
+  }
+  .galleta { 
+    grid-area: galleta; 
+    border: rgb(192, 192, 192) solid 1px;
+    border-radius: 15px;
+  }
+  .cupcake { 
+    grid-area: cupcake; 
+    border: rgb(192, 192, 192) solid 1px;
+    border-radius: 15px;
+  }
+  .kequi { 
+    grid-area: kequi; 
+    border: rgb(192, 192, 192) solid 1px;
+    border-radius: 15px;
+  }
+  .torta { 
+    grid-area: torta; 
+    border: rgb(192, 192, 192) solid 1px;
+    border-radius: 15px;
+  }
+
+  .panaderiaImg {
+    border-radius: 15px 15px 0 0;
+    width: 100%;
+    height: 200px;
+  }
+
+  .tortaImg {
+    border-radius: 15px 15px 0 0;
+    width: 100%;
+    height: 700px;
+  }
   
 /* OTROS PRODUCTOS */
 
@@ -271,12 +386,26 @@ img {
     grid-auto-flow: row;
     grid-template-areas:
       "pescados aves cerdos";
+      gap: 20px;
+      margin: 0 2rem 2rem 2rem;
   }
 
   .containerOtroProductos h2 {
     font-family: 'Ubuntu', sans-serif;
   }
   
-  .pescados { grid-area: pescados; }
-  .aves { grid-area: aves; }
-  .cerdos { grid-area: cerdos; }
+  .pescados { 
+    grid-area: pescados; 
+    border: rgb(192, 192, 192) solid 1px;
+    border-radius: 15px;
+  }
+  .aves { 
+    grid-area: aves;
+    border: rgb(192, 192, 192) solid 1px;
+    border-radius: 15px; 
+  }
+  .cerdos { 
+    grid-area: cerdos; 
+    border: rgb(192, 192, 192) solid 1px;
+    border-radius: 15px;
+  }
